--- a/cardealership-frontend/src/app/clients/clients.component.html
+++ b/cardealership-frontend/src/app/clients/clients.component.html
@@ -1,1 +1,19 @@
-<p>clients works!</p>
+<table class="table table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Surname</th>
+        <th scope="col">email</th>
+        <th scope="col">number</th>
+        <th scope="col" style="width: 140px;">A button</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let client of clients">
+        <td>{{client.name}}</td>
+        <td>{{client.surname}}</td>
+        <td>{{client.email}}</td>
+        <td>{{client.number}}</td>
+      </tr>
+    </tbody>
+  </table>
