--- a/cardealership-frontend/src/app/app.component.html
+++ b/cardealership-frontend/src/app/app.component.html
@@ -1,14 +1,13 @@
 
 <!-- header -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="home">Navbar</a>
+  <a class="navbar-brand" routerLink="home">Car Dealership</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="home">Home</a>
       <a class="nav-item nav-link" routerLink="cars">Cars</a>
-      <a class="nav-item nav-link" routerLink='clients'>Clients</a>
-      <a class="nav-item nav-link" routerLink='orders'>Orders</a>
-      <a class="nav-item nav-link" routerLink='forbidden'>Forbidden</a>
+      <a class="nav-item nav-link" *ngIf="isAdmin()" routerLink='clients'>Clients</a>
+      <a class="nav-item nav-link" *ngIf="isAdmin()" routerLink='orders'>Orders</a>
     </div>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" *ngIf="!isLoggedIn()" routerLink='login'>login</a>
