--- a/cardealership-frontend/src/app/cars/cars.component.html
+++ b/cardealership-frontend/src/app/cars/cars.component.html
@@ -1,3 +1,40 @@
+<!-- Button trigger modal -->
+<button type="button" *ngIf="isAdmin()" class="btn btn-primary">
+    <i class="fas fa-plus"></i> Add Car
+  </button>
+
+<!-- ADD Modal -->
+<div class="modal fade" id="addCarModal" tabindex="-1" role="dialog" aria-labelledby="addCarModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCarModalLabel">Add Car</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class="form-group">
+              <label for="car-name" class="col-form-label">Name:</label>
+              <input type="text" class="form-control" id="car-name">
+          </div>
+          <div class="form-group">
+              <label for="car-model" class="col-form-label">Model:</label>
+              <input type="text" class="form-control" id="car-model">
+          </div>
+          <div class="form-group">
+              <label for="car-price" class="col-form-label">Price:</label>
+              <input type="text" class="form-control" id="car-price">
+          </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- CARDS -->
 <div class="container">
     <div class="row">
@@ -6,7 +43,7 @@
                 <div class="card-img"><img src="https://via.placeholder.com/240x240/FFB6C1/000000" alt="..."></div>
                 <div class="card-body">
                     <div>
-                        <a href="#"><i class="bg-white p-3 rounded-circle ti-shopping-cart font-weight-600"></i></a>
+                        <a href="/home"><i class="bg-white p-3 rounded-circle ti-shopping-cart font-weight-600"></i></a>
                     </div>
                 </div>
             </div>
@@ -14,6 +51,18 @@
                 <h4 class="h5 mb-2"><a class="text-secondary">{{car.name}}</a></h4>
                 <h4 class="h5 mb-2"><a class="text-after">{{car.model}}</a></h4>
                 <h5 class="mb-0 text-primary">${{car.price}}</h5>
+                <a *ngIf="isAdmin()" class="table-link  text-info">
+                    <span class="fa-stack">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                    </span>
+                    </a>
+                    <a *ngIf="isAdmin()" class="table-link text-danger">
+                    <span class="fa-stack">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    </a>
             </div>
         </div>
     </div>
