--- a/cardealership-frontend/src/app/clients/clients.component.html
+++ b/cardealership-frontend/src/app/clients/clients.component.html
@@ -1,6 +1,13 @@
+<!-- Button for add -->
+<button type="button" class="btn btn-primary">
+  <i class="fas fa-plus"></i> Add Client
+</button>
+
+<!-- table for data -->
 <table class="table table-dark">
     <thead>
       <tr>
+        <th scope="col">ID</th>
         <th scope="col">Name</th>
         <th scope="col">Surname</th>
         <th scope="col">email</th>
@@ -10,10 +17,25 @@
     </thead>
     <tbody>
       <tr *ngFor="let client of clients">
+        <td>{{client.clientId}}</td>
         <td>{{client.name}}</td>
         <td>{{client.surname}}</td>
         <td>{{client.email}}</td>
         <td>{{client.number}}</td>
+        <td>
+          <a class="table-link  text-info">
+          <span class="fa-stack">
+              <i class="fa fa-square fa-stack-2x"></i>
+              <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+          <a class="table-link  text-danger">
+          <span class="fa-stack">
+              <i class="fa fa-square fa-stack-2x"></i>
+              <i class="fa fa-trash fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+        </td>
       </tr>
     </tbody>
   </table>
