--- a/cardealership-frontend/src/app/app.component.html
+++ b/cardealership-frontend/src/app/app.component.html
@@ -6,8 +6,8 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="home">Home</a>
       <a class="nav-item nav-link" routerLink="cars">Cars</a>
-      <a class="nav-item nav-link" *ngIf="isAdmin()" routerLink='clients'>Clients</a>
-      <a class="nav-item nav-link" *ngIf="isAdmin()" routerLink='orders'>Orders</a>
+      <a class="nav-item nav-link" *ngIf="isAdmin()||isLoggedIn()" routerLink='clients'>Clients</a>
+      <a class="nav-item nav-link" *ngIf="isAdmin()||isLoggedIn()" routerLink='orders'>Orders</a>
     </div>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" *ngIf="!isLoggedIn()" routerLink='login'>login</a>
