--- a/cardealership-frontend/src/app/clients/clients.component.html
+++ b/cardealership-frontend/src/app/clients/clients.component.html
@@ -2,6 +2,12 @@
 <button type="button" class="btn btn-primary">
   <i class="fas fa-plus"></i> Add Client
 </button>
+<button type="button" disabled id="btnPrevPage" class="btn btn-primary" (click)="PrevPage()">
+  <i class="fas fa-plus"></i> Prev Page
+</button>
+<button type="button" id="btnNextPage" class="btn btn-primary" (click)="NextPage()">
+  <i class="fas fa-plus"></i> Next Page
+</button>
 
 <!-- table for data -->
 <table class="table table-dark">
@@ -16,7 +22,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let client of clients">
-        <td>{{client.clientId}}</td>
+        <td>{{client.id}}</td>
         <td>{{client.fullName}}</td>
         <td>{{client.email}}</td>
         <td>{{client.number}}</td>
