--- a/cardealership-frontend/src/app/orders/orders.component.html
+++ b/cardealership-frontend/src/app/orders/orders.component.html
@@ -2,6 +2,12 @@
 <button type="button" class="btn btn-primary">
   <i class="fas fa-plus"></i> Add Order
 </button>
+<button type="button" disabled id="btnPrevPage" class="btn btn-primary" (click)="PrevPage()">
+  <i class="fas fa-plus"></i> Prev Page
+</button>
+<button type="button" id="btnNextPage" class="btn btn-primary" (click)="NextPage()">
+  <i class="fas fa-plus"></i> Next Page
+</button>
 
 <!-- table for data -->
 <table class="table table-dark">
@@ -10,8 +16,8 @@
         <th scope="col">ID</th>
         <th scope="col">Car name</th>
         <th scope="col">Car model</th>
+        <th scope="col">Cli ID</th>
         <th scope="col">Cli name</th>
-        <th scope="col">Cli surname</th>
         <th scope="col">Cli number</th>
         <th scope="col">status</th>
         <th scope="col" style="width: 140px;">Action Button</th>
@@ -22,8 +28,8 @@
         <td>{{order.orderId}}</td>
         <td>{{order.car.name}}</td>
         <td>{{order.car.model}}</td>
-        <td>{{order.client.name}}</td>
-        <td>{{order.client.surname}}</td>
+        <td>{{order.client.id}}</td>
+        <td>{{order.client.fullName}}</td>
         <td>{{order.client.number}}</td>
         <td>{{order.status}}</td>
         <td>
