--- a/cardealership-frontend/src/app/app.component.html
+++ b/cardealership-frontend/src/app/app.component.html
@@ -2,7 +2,6 @@
 <!-- header -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="home">Car Dealership</a>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="home">Home</a>
       <a class="nav-item nav-link" routerLink="cars">Cars</a>
@@ -10,10 +9,10 @@
       <a class="nav-item nav-link" *ngIf="isAdmin()||isLoggedIn()" routerLink='orders'>Orders</a>
     </div>
     <div class="navbar-nav ml-auto">
+      <a class="nav-item nav-link" *ngIf="isLoggedIn()">{{username}}</a>
       <a class="nav-item nav-link" *ngIf="!isLoggedIn()" routerLink='login'>login</a>
       <a class="nav-item nav-link" *ngIf="isLoggedIn()" (click)="LogOut()" routerLink='home'>logout</a>
     </div>
-  </div>
 </nav>
 <!-- router -->
 <router-outlet></router-outlet>
