--- a/cardealership-frontend/src/app/cars/cars.component.html
+++ b/cardealership-frontend/src/app/cars/cars.component.html
@@ -1,16 +1,19 @@
-<!-- Button trigger modal -->
-<button type="button" *ngIf="isAdmin()" class="btn btn-primary">
-  <i class="fas fa-plus"></i> Add Car
-</button>
-<button type="button" disabled id="btnPrevPage" class="btn btn-primary" (click)="PrevPage()">
-  <i class="fas fa-plus"></i> Prev Page
-</button>
-<button type="button" id="btnNextPage" class="btn btn-primary" (click)="NextPage()">
-  <i class="fas fa-plus"></i> Next Page
-</button>
+<!-- Buttons -->
+<div>
+  <button type="button" *ngIf="isAdmin()" class="btn btn-primary" (click)="onOpenModal(null,'add')">
+    <i class="fas fa-plus"></i> Add Car
+  </button>
+
+  <!-- SEARCH input and button -->
+  <button type="button" id="btnSearch" class="btn btn-secondary" (click)="searchCheck()">
+    <i class="fas fa-plus"></i> Search
+  </button>
+  <input type="text" autocomplete="off" id="inSearch" placeholder="Name...">
+</div>
 
 <!-- ADD Modal -->
-<div class="modal fade" id="addCarModal" tabindex="-1" role="dialog" aria-labelledby="addCarModalLabel" aria-hidden="true">
+<div class="modal fade" id="addCarModal" tabindex="-1" role="dialog" aria-labelledby="addCarModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -20,56 +23,130 @@
         </button>
       </div>
       <div class="modal-body">
+        <form #addFormCar="ngForm">
           <div class="form-group">
-              <label for="car-name" class="col-form-label">Name:</label>
-              <input type="text" class="form-control" id="car-name">
+            <label for="car-model-add" class="col-form-label">Model:</label>
+            <input type="text" autocomplete="off" ngModel required name="model" class="form-control" id="car-model-add">
           </div>
           <div class="form-group">
-              <label for="car-model" class="col-form-label">Model:</label>
-              <input type="text" class="form-control" id="car-model">
+            <label for="car-name-add" class="col-form-label">Name:</label>
+            <input type="text" autocomplete="off" ngModel required name="name" class="form-control" id="car-name-add">
           </div>
           <div class="form-group">
-              <label for="car-price" class="col-form-label">Price:</label>
-              <input type="text" class="form-control" id="car-price">
+            <label for="car-price-add" class="col-form-label">Price:</label>
+            <input type="text" autocomplete="off" ngModel required name="price" class="form-control" id="car-price-add">
           </div>
+          <div class="modal-footer">
+            <button type="button" id="close-form-car-add" class="btn btn-dark" data-dismiss="modal">Close</button>
+            <button type="submit" [disabled]="addFormCar.invalid" (click)="onAddCar(addFormCar)"
+              class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save</button>
+    </div>
+  </div>
+</div>
+
+<!-- EDIT Modal -->
+<div class="modal fade" id="editCarModal" tabindex="-1" role="dialog" aria-labelledby="editCarModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editCarModalLabel">Edit Car</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #editFormCar="ngForm">
+          <input type="hidden" ngModel="{{editCar?.carId}}" name="carId" class="form-control" id="car-id-edit">
+          <div class="form-group">
+            <label for="car-model-edit" class="col-form-label">Model:</label>
+            <input type="text" autocomplete="off" ngModel="{{editCar?.model}}" required name="model"
+              class="form-control" id="car-model-edit">
+          </div>
+          <div class="form-group">
+            <label for="car-name-edit" class="col-form-label">Name:</label>
+            <input type="text" autocomplete="off" ngModel="{{editCar?.name}}" required name="name" class="form-control"
+              id="car-name-edit">
+          </div>
+          <div class="form-group">
+            <label for="car-price-edit" class="col-form-label">Price:</label>
+            <input type="text" autocomplete="off" ngModel="{{editCar?.price}}" required name="price"
+              class="form-control" id="car-price-edit">
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="close-form-car-edit" class="btn btn-dark" data-dismiss="modal">Close</button>
+            <button type="submit" [disabled]="editFormCar.invalid" (click)="onUpdateCar(editFormCar.value)"
+              class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- DELETE Modal -->
+<div class="modal fade" id="deleteCarModal" tabindex="-1" role="dialog" aria-labelledby="deleteCarModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteCarModalLabel">Delete Car</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="modal-text">Are you sure you want to delete Car - {{deleteCar?.model}} {{deleteCar?.name}}?</p>
+        <div class="modal-footer">
+          <button type="button" id="close-form-car-delete" class="btn btn-dark" data-dismiss="modal">No</button>
+          <button (click)="onDeleteCar(deleteCar?.carId)" class="btn btn-danger">Yes</button>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <!-- CARDS -->
-<div class="container">
-    <div class="row">
-        <div *ngFor="let car of cars" class="col-sm-6 col-lg-3 mb-2-6">
-            <div class="card-wrapper mb-4">
-                <div class="card-img"><img src="https://via.placeholder.com/240x240/FFB6C1/000000" alt="..."></div>
-                <div class="card-body">
-                    <div>
-                        <a href="/home"><i class="bg-white p-3 rounded-circle ti-shopping-cart font-weight-600"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center">
-                <h4 class="h5 mb-2"><a class="text-secondary">{{car.name}}</a></h4>
-                <h4 class="h5 mb-2"><a class="text-after">{{car.model}}</a></h4>
-                <h5 class="mb-0 text-primary">${{car.price}}</h5>
-                <a *ngIf="isAdmin()" class="table-link  text-info">
-                    <span class="fa-stack">
-                        <i class="fa fa-square fa-stack-2x"></i>
-                        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
-                    </span>
-                    </a>
-                    <a *ngIf="isAdmin()" class="table-link text-danger">
-                    <span class="fa-stack">
-                        <i class="fa fa-square fa-stack-2x"></i>
-                        <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    </a>
-            </div>
+<div class="container" id="card-container">
+  <div class="row">
+    <div *ngFor="let car of cars" class="col-sm-6 col-lg-3 mb-2-6">
+      <div class="card-wrapper mb-4">
+        <div class="card-img"><img src="https://via.placeholder.com/240x240/FFB6C1/000000" alt="..."></div>
+        <div class="card-body">
+          <div>
+            <a href="/home"><i class="bg-white p-3 rounded-circle ti-shopping-cart font-weight-600"></i></a>
+          </div>
         </div>
+      </div>
+      <div class="text-center">
+        <h4 class="h5 mb-2"><a class="text-after">{{car.model}}</a></h4>
+        <h4 class="h5 mb-2"><a class="text-secondary">{{car.name}}</a></h4>
+        <h5 class="mb-0 text-primary">${{car.price}}</h5>
+        <a *ngIf="isAdmin()" class="table-link  text-info" (click)="onOpenModal(car,'edit')">
+          <span class="fa-stack">
+            <i class="fa fa-square fa-stack-2x"></i>
+            <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+          </span>
+        </a>
+        <a *ngIf="isAdmin()" class="table-link text-danger" (click)="onOpenModal(car,'delete')">
+          <span class="fa-stack">
+            <i class="fa fa-square fa-stack-2x"></i>
+            <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+          </span>
+        </a>
+      </div>
     </div>
+  </div>
+</div>
+
+<div class="centered-buttons">
+  <button type="button" disabled id="btnPrevPage" class="btn btn-primary" (click)="PrevPage()">
+    <i class="fas fa-angle-double-left"></i> Prev Page
+  </button>
+  <button type="button" id="btnNextPage" class="btn btn-primary" (click)="NextPage()">
+    Next Page <i class="fas fa-angle-double-right"></i>
+  </button>
 </div>
