--- a/cardealership-frontend/src/app/clients/clients.component.css
+++ b/cardealership-frontend/src/app/clients/clients.component.css
@@ -1,5 +1,5 @@
 .table {
-    width:85%;
+    width:90%;
     margin-top: 30px; 
     margin-left:5%; 
     margin-right:10%;
@@ -7,4 +7,57 @@
 .btn-primary {
   margin-top: 10px;
   margin-left: 10px;
+}
+.btn-secondary {
+  background-color: rgb(0, 123, 255);
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  float: right;
+}
+.btn-dark {
+  float: right;
+  background-color: rgb(1, 6, 12);
+  margin-top: 10px;
+  margin-left: 10px;
+}
+input[type=text][class=input-search] {
+  height: 38px;
+  width: 120px;
+  margin-left: 11px;
+  margin-top: 10px;
+  float: right;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type=text] {
+  height: 38px;
+  width: 270px;
+  margin-left: 11px;
+  margin-top: 10px;
+  float: right;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.modal-title {
+  color: black;
+}
+.col-form-label {
+  color: black;
+}
+.modal-text {
+  color: black;
+}
+.btn-danger {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+input:invalid {
+  border: red solid 1px;
+}
+.centered-buttons {
+  display: flex;
+  justify-content: center;
 }
