--- a/cardealership-frontend/src/app/login/login.component.html
+++ b/cardealership-frontend/src/app/login/login.component.html
@@ -1,16 +1,18 @@
 <div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Login Form -->
-      <form [formGroup]="checkoutForm">
-        <input type="text" autocomplete="off" id="login" class="fadeIn second" placeholder="login" formControlName="username">
-        <input type="password" autocomplete="off" id="password" class="fadeIn third" placeholder="password" formControlName="password">
-        <input type="submit" class="fadeIn fourth" value="Log In" (click)="Login()">
-      </form>
-  
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <a class="underlineHover" href="#">Forgot Password?</a>
-      </div>
-  
+  <div id="formContent">
+    <!-- Login Form -->
+    <form [formGroup]="checkoutForm">
+      <input type="text" autocomplete="off" id="login" class="fadeIn second" placeholder="login"
+        formControlName="username">
+      <input type="password" autocomplete="off" id="password" class="fadeIn third" placeholder="password"
+        formControlName="password">
+      <input type="submit" class="fadeIn fourth" value="Log In" (click)="Login()">
+    </form>
+
+    <!-- Remind Passowrd -->
+    <div id="formFooter">
+      <a class="underlineHover" href="#">Forgot Password?</a>
     </div>
+
   </div>
+</div>
