--- a/cardealership-frontend/src/app/clients/clients.component.html
+++ b/cardealership-frontend/src/app/clients/clients.component.html
@@ -61,7 +61,7 @@
       </div>
       <div class="modal-body">
         <form #editFormClient="ngForm">
-          <input type="hidden" ngModel="{{editClient?.id}}" name="id" class="form-control" id="car-id-edit">
+          <input type="hidden" ngModel="{{editClient?.id}}" name="id" class="form-control" id="client-id-edit">
           <div class="form-group">
             <label for="client-fullName-edit" class="col-form-label">Name and Surname:</label>
             <input type="text" autocomplete="off" ngModel="{{editClient?.fullName}}" required name="fullName" class="form-control" id="client-fullName-edit">
